Fix signature spacing

--- a/src/components/Signature/Signature.scss
+++ b/src/components/Signature/Signature.scss
@@ -4,5 +4,6 @@
   padding-top: 25px;
   p,a {
     font-size: 10px;
+    margin-bottom: 0;
   }
 }
